# blockchain-preprocessor

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: build.yaml  prover-node.yaml
.github/workflows/prover/: nighly-lints.yaml  tests.yaml
data/: README.md  data.json
diagrams/: architecture_components.drawio  sequence-diagram.txt  stages_diagram.drawio  system_architecture.drawio  system_architecture_stages.drawio  zokrates-service-chart.drawio  zokrates-service.drawio
hooks/: pre-commit
k8s/: README.md  deployment copy.yaml  deployment.yaml  namespace.yaml  prover.yaml  pvc.yaml  svc.yaml  testjob.yaml  testpod.yaml
prover-node/: Cargo.toml  Dockerfile.prod  README.md  Rocket.toml
prover-node/proving/: Dockerfile  README.md  eddsa_signature.txt  proof_of_ownership.zok  witness_abi.json
prover-node/src/: compile.rs  compute_witness.rs  generate_proof.rs  lib.rs  main.rs  ops.rs  routes.rs  tests.rs
prover-node/src/ops/: compilation.rs  compile.rs  proof.rs  witness.rs
prover-node/src/routes/: compile.rs  compute_generate_proof.rs  compute_witness.rs  generate_proof.rs  health.rs  proving_key.rs
prover-node/src/utils/: errors.rs  responses.rs
prover-node/tests/: proving.key  test
tests/dataset/: README.md  data.ipynb
tests/dataset/scripts/: discovergy_json_files_to_csv.py  generate_merkle_proofs.py  signature_data_from_discovergy_tabular.py
tests/proofs/: README.md
tests/proofs/array_proofs/: array_lib.zok
tests/proofs/lib/: maps.zok  merkle_tree.zok  (+3 more)
tests/src/: Dockerfile  requirements.txt  run_test.py  test.py
(+36 files in other folders)
